Fix page switcher dropdown on safari (#860)

--- a/src/Elastic.Markdown/Assets/styles.css
+++ b/src/Elastic.Markdown/Assets/styles.css
@@ -242,3 +242,7 @@ body {
 	display: grid;
 	grid-template-rows: auto auto 1fr auto;
 }
+
+#pages-nav details > summary::-webkit-details-marker {
+	display: none;
+}
